--- a/_posts/2015-12-06-pic-test.md
+++ b/_posts/2015-12-06-pic-test.md
@@ -2,10 +2,8 @@
 title:Photo tests with shadows
 layout:post
 ---
-<div class=page>
- <h2>Picture with shadow surrounding it.</h2>
-<div class=message>
- <p>This page implemented some css code from Wang Yin's website <link>http://yinwang.org</link>.</p>
- </div>
-   <p><img src=/public/assets/1446323126_github.png></p>
-   <p><img src=/public/assets/IMG_2195.jpg></p>
+##Picture with shadow surrounding it.
+
+This page implemented some css code from Wang Yin's website <link>http://yinwang.org</link>.</p>
+<p><img src=/public/assets/1446323126_github.png></p>
+<p><img src=/public/assets/IMG_2195.jpg></p>
