--- a/_posts/2015-12-06-pic-test.md
+++ b/_posts/2015-12-06-pic-test.md
@@ -4,6 +4,8 @@ layout:post
 ---
 ##Picture with shadow surrounding it.
 
-This page implemented some css code from Wang Yin's website <link>http://yinwang.org</link>.</p>
-<p><img src=/public/assets/1446323126_github.png></p>
-<p><img src=/public/assets/IMG_2195.jpg></p>
+This page implemented some css code from Wang Yin's website <http://yinwang.org>.
+
+![](/public/assets/1446323126_github.png)
+
+![](/public/assets/IMG_2195.jpg)
