--- a/_posts/2015-12-06-pic-test.md
+++ b/_posts/2015-12-06-pic-test.md
@@ -8,4 +8,4 @@ This page implemented some css code from Wang Yin's website <http://yinwang.org>
 
 ![](/public/assets/1446323126_github.png)
 
-![](/public/assets/IMG_2195.jpg)
+![](/public/assets/IMG_2195.JPG)
