--- a/_posts/2015-10-10-ios9-review.md
+++ b/_posts/2015-10-10-ios9-review.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: iOS 9 实力评测
+title: 完全搬运！iOS 9 实力评测
 ---
 
 # iOS 9 review: making the basics work even better
@@ -261,7 +261,7 @@ iOS9算是必升的吧。也许不必说这话，因为这版iOS系统是[普及
 **关键参数**
 
 |TYPE|SOURCE MODEL|ARCHITECTURE|RELEASED|
-|---------------------------------------|
+|----|------------|------------|--------|
 |Mobile/embedded OS|Closed|64-bit,32-bit|2015-9-16|
 
 |系统种类|源代码类型|处理器架构|发布时间|
