--- a/_posts/2015-12-11-what-is-5g.md
+++ b/_posts/2015-12-11-what-is-5g.md
@@ -95,7 +95,7 @@ When is 5G coming?
 
 None of these questions are going to be answered any time soon. The industry's consensus is that it will run 5G experiments in South Korea during the 2018 Winter Olympics, with mass deployments beginning sometime in 2020.
 
-这类的问题，很快就会有答案了。整个行业的共识是，在2018年的韩国冬奥会上，他们将会进行5G的实验，而大规模部署工作则会在大概2020年开始。
+这类的问题在最近一段时间之内还无法回答。但整个行业的共识是，在2018年的韩国冬奥会上，他们将会进行5G的实验，而大规模部署工作则会在大概2020年开始。
 
 Yet Verizon (VZ, Tech30) has said that it is working on 5G technology with the aim of bringing it to market much sooner -- as early as 2017.
 
