--- a/_posts/2015-12-11-what-is-5g.md
+++ b/_posts/2015-12-11-what-is-5g.md
@@ -3,7 +3,8 @@ layout: post
 title: 【搬运】5G究竟是个啥
 ---
 
-中英翻译由本人所作。原文链接：<http://money.cnn.com/2015/12/04/technology/what-is-5g/index.html>
+中英翻译由本人所作。原文链接：
+<http://money.cnn.com/2015/12/04/technology/what-is-5g/index.html>
 
 <p>Just five years after the first 4G smartphone hit the market, the wireless industry is already preparing for 5G.</p>
 
