--- a/_posts/2015-10-10-ios9-review.md
+++ b/_posts/2015-10-10-ios9-review.md
@@ -5,7 +5,11 @@ title: 【搬运】iOS 9 实力评测
 
 # iOS 9 review: making the basics work even better
 
-中英翻译由本人所作。原文链接：[http://www.engadget.com/2015/09/22/ios-9-review/](http://www.engadget.com/2015/09/22/ios-9-review/) 源文件见：[https://github.com/duoduoeeee/tr-source/blob/master/finished/20151010-init.md](https://github.com/duoduoeeee/tr-source/blob/master/finished/20151010-init.md)。欢迎提交issues (⊙▽⊙)
+中英翻译由本人所作。原文链接：
+[http://www.engadget.com/2015/09/22/ios-9-review/](http://www.engadget.com/2015/09/22/ios-9-review/) 
+源文件见：
+[https://github.com/duoduoeeee/tr-source/blob/master/finished/20151010-init.md](https://github.com/duoduoeeee/tr-source/blob/master/finished/20151010-init.md)。
+欢迎提交issues (⊙▽⊙)
 
 by [Chris Velazco](http://www.engadget.com/about/editors/chris-velazco/) - [@chrisvelazco](http://twitter.com/chrisvelazco) - September 22nd 2015 At 4:30pm
 
