--- a/_posts/2016-03-08-zh-cn-test.md
+++ b/_posts/2016-03-08-zh-cn-test.md
@@ -1,15 +1,15 @@
----
+﻿---
 layout: post
 title: "中文测试"
 date: 2016-03-08 21:49:00 +0800
 ---
-#一级标题
+# 一级标题
 
-##二级标题
+## 二级标题
 
-###三级标题
+### 三级标题
 
-###四级标题
+#### 四级标题
 
 正常行文
 
