--- a/_posts/pages/1970-01-01-about.md
+++ b/_posts/pages/1970-01-01-about.md
@@ -13,9 +13,9 @@ description: 一个爱折腾奇怪东西的人
 
 <center><p><a href="https://twitter.com/duoduoeeee" target="\_blank"><i class="fa fa-twitter"></i></a> - <a href="mailto:lingduo@lingduo.net.cn"><i class="fa fa-envelope"></i></a> - <a href="https://thoughtstreams.io/duoduoeeee" target="\_blank"><i class="fa fa-pencil"></i></a></p></center>
 
-## Contact the theme maker, Mucosame
+## Contact the theme maker, Mukosame
 
-<center><p><a href="https://github.com/mucosame" target="\_blank"><i class="fa fa-github"></i></a> - <a href="https://mucosame.github.io" target="\_blank"><i class="fa fa-globe"></i></a> - <a href="mailto:mukosame@foxmail.com"><i class="fa fa-envelope"></i></a></p></center>
+<center><p><a href="https://github.com/mukosame" target="\_blank"><i class="fa fa-github"></i></a> - <a href="https://mukosame.github.io" target="\_blank"><i class="fa fa-globe"></i></a> - <a href="mailto:mukosame@foxmail.com"><i class="fa fa-envelope"></i></a></p></center>
 
 ## According to the theme maker...
 
