--- a/_posts/pages/1970-01-01-about.md
+++ b/_posts/pages/1970-01-01-about.md
@@ -5,9 +5,7 @@ permalink: /about
 category: page
 description: 一个爱折腾奇怪东西的人
 ---
-**This website implements open source code from GitHub user Mucosame.**
-
-**Pictures are taken from unsplash.com.**
+This website implements open source code from GitHub user Mucosame. Pictures are taken from [unsplash.com](https://unsplash.com).
 
 ## Contact Me
 
