--- a/_posts/2017-01-15-about.md
+++ b/_posts/2017-01-15-about.md
@@ -1,13 +1,14 @@
 ---
 title: 关于我、开源、版权和隐私声明
-layout: post
 ---
 ### 开源许可
-新的博客换了架构，用成了 Hexo。 
+我换回了 Jekyll，因为 Hexo 的提交机制太神秘了……改完了文章，Git 根本显示不出来……一怒换回。。
 
-新上的主题，是 GitHub 上有人模仿王垠大神的博客，做出的一个开源的方案。原地址见：<https://github.com/mickeyouyou/yinwang>。我在此基础上去掉了移动版适配，并且调整了字体。
+之前用的 Hexo 主题，是 GitHub 上有人模仿王垠大神的博客，做出的一个开源的方案。原地址见：<https://github.com/mickeyouyou/yinwang>。我在此基础上去掉了移动版适配，并且调整了字体。现在的这个同样是基于 GitHub 上有人 fork 的垠神早前版本的网页，地址见 <https://github.com/miaopeng/yinwang0-blog-cn>。
 
-我在这里加了一些专有的字体，比如 Trebuchet MS 、方正的清刻本悦宋和 Lucida Grande。我们会保证这些字体不用于商业。事实上由于 Lucida 太好看的关系，我是准备把它嵌入到网页里面的，但是事实上只把它装在了 css 的 font-family 里面，装了这些字体的人可以很容易看到，非常好看，是吧
+还有 CSS 是我拿调试器从垠神的网站上挖的……网站的布局模板也是……还望他宽恕则个。
+
+我在这里加了一些专有的字体，比如 Trebuchet MS 、华文中宋和 Lucida Grande。我们会保证这些字体不用于商业。我本来是准备把这些字体嵌入到网页里面的，但是事实上只把它装在了 css 的 font-family 里面，装了这些字体的人可以很容易看到，非常好看，是吧
 
 ### 内容和版式
 
@@ -15,21 +16,21 @@ layout: post
 
 考虑到之前的翻译通常多图而且格式混乱，我们在新版的网站当中会删除之前的文章。如果想查看的话可以移步 <https://github.com/duoduoeeee/tr-source>，我把它们都搬到这里了。
 
-还有一点得提，我们重新配置了网站的链接，之前分享的链接，已都可作废了。
+还有一点得提，我重新配置了网站的链接，之前分享的链接，尽管作废便是。短网址服务那边我也会做相应调整。
 
 ### 隐私权
 
-本网站使用了 [腾讯分析](http://ta.qq.com)。据其官网所言，它会收集的信息有
+我把分析脚本去掉了……挂我网站上我觉得恐慌，自己都不敢打开自己的网站……不信看调试器。大家坦诚相待多好，是吧。
 
-- 实时数据分析——每十分钟内访问网站的浏览量（PV）和独立访客（UV）
-- 网站分析——提供全面准确的 PV、UV、VV、IP 等统计，包括站点的平均在线时长、跳出率等分析功能
-- 来源分析——了解访客来到网站的各种渠道，更合理地规划和推广网站
-- 路径分析——观察访客在网站中的浏览足迹及访问下层页面的流失、留存情况
-- 页面热区——识别当前热区并展示点击量、占比等信息；同时在 mini 窗口中还可查询此热区的地域、来源、搜索词、浏览器等详细信息
+至于有多少人看我网站？哈哈，这不重要 ^ ^
 
-具体见 <http://ta.qq.com/analysis/function>。
+七牛云对账单已经说明了一切
 
-此外，我会适时推出网站访客统计报告，一般是在年底，写成一篇博客贴出来
+![qiniu](/images/qiniu.png)
+
+搭设本站是出于我个人的兴趣爱好。本站不加任何形式的广告，不会与网上的广告商合作……对，辜狗也没有
+
+所有的 CSS 和 JS 都放到本地了，包括引用的 bootstrap 和 jQuery 等库。
 
 ### 最后
 
@@ -40,3 +41,7 @@ layout: post
 - 哔哩哔哩：[个人空间](http://space.bilibili.com/17376116)。
 
 当然，如果你对我的翻译有疑问，可以发来邮件。如果你有 GitHub 账户，可以在我网站的 Repository 下提出 Issue，或者直接提交 Pull Request。
+
+呃 话说。
+
+我的首页上，列表项之间为什么会有奇怪的间隙啊 =\_= 有人知道的话，给我发 PR 或 issue 可好 ^ ^
