--- a/_posts/2017-02-11-on-yousa.md
+++ b/_posts/2017-02-11-on-yousa.md
@@ -74,7 +74,9 @@ She also participated in Bilibili's Spring Festival Gala in 2013, 2014, 2016 as 
 
 Because she refuses to be known by the public about her real identity, she is never exposed on TV or such traditional media. She once had an interview with someone and the video is posted on Bilibili in 2015, but it's been deleted as well.
 
-But it doesn't mean that nobody has ever interviewed her. Actually dortail.com, an ACG socialization site somehow did a brief communication with her, but only text was seen on the website's Wechat Public Platform...See the full version [here](https://mp.weixin.qq.com/s?__biz=MzIwODA5MDE3OA==&mid=401277830&idx=1&sn=b8df0e13b10cab5c8b4fb9ffba61051f&3rd=MzA3MDU4NTYzMw==&scene=6#rd)
+But it doesn't mean that nobody has ever interviewed her. Actually dortail.com, an ACG socialization site somehow did a brief communication with her, but only text was seen on the website's Wechat Public Platform...
+
+See the full version [here](https://mp.weixin.qq.com/s?__biz=MzIwODA5MDE3OA==&mid=401277830&idx=1&sn=b8df0e13b10cab5c8b4fb9ffba61051f&3rd=MzA3MDU4NTYzMw==&scene=6#rd)
 
 - According to herself, she is fond of Akiaka-on
 - She prefers to live on producing music to other means
