update on yousa

--- a/_posts/2017-02-11-on-yousa.md
+++ b/_posts/2017-02-11-on-yousa.md
@@ -3,7 +3,7 @@ title: 【@英语大神】On Yousa
 ---
 > Recommended background music: **Dark Cat** by Lingyuan yousa. [Netease Music](http://music.163.com/#/m/song?id=33682737)
 
-![](https://o0stweauh.qnssl.com/16101215509919.jpg)
+![](https://o0stweauh.qnssl.com/220px-6163e3ccgw1eidn6hlhdmj20ae0af0u2.jpg)
 
 ### Overview
 
@@ -56,7 +56,7 @@ Even on this wiki, Lingyuan is as mysterious as on any other online platform:
 
 ### Works
 
-According to Moegirl Wiki, Lingyuan yousa has published around 152 pieces in total on 5sing, Bilibili as well as on YouTube. The entire list is found on Moegirl Wiki [here](https://zh.moegirl.org/zh-hans/%E6%B3%A0%E9%B8%A2yousa#.E4.BD.9C.E5.93.81).
+According to Moegirl Wiki, Lingyuan yousa has published around 152 pieces in total on 5sing, Bilibili as well as on YouTube. The entire list is found [here](https://zh.moegirl.org/zh-hans/%E6%B3%A0%E9%B8%A2yousa#.E4.BD.9C.E5.93.81).
 
 She also participated in Bilibili's Spring Festival Gala in 2013, 2014, 2016 as well as in 2017.
 
@@ -76,7 +76,7 @@ Because she refuses to be known by the public about her real identity, she is ne
 
 But it doesn't mean that nobody has ever interviewed her. Actually dortail.com, an ACG socialization site somehow did a brief communication with her, but only text was seen on the website's Wechat Public Platform...
 
-See the full version [here](https://mp.weixin.qq.com/s?__biz=MzIwODA5MDE3OA==&mid=401277830&idx=1&sn=b8df0e13b10cab5c8b4fb9ffba61051f&3rd=MzA3MDU4NTYzMw==&scene=6#rd)
+See the full interview [here](https://mp.weixin.qq.com/s?__biz=MzIwODA5MDE3OA==&mid=401277830&idx=1&sn=b8df0e13b10cab5c8b4fb9ffba61051f&3rd=MzA3MDU4NTYzMw==&scene=6#rd)
 
 - According to herself, she is fond of Akiaka-on
 - She prefers to live on producing music to other means
@@ -84,11 +84,13 @@ See the full version [here](https://mp.weixin.qq.com/s?__biz=MzIwODA5MDE3OA==&mi
 - Her lyrics are beautiful because she likes reading poems, proses as well as watching TV, she believes that reading some ancient works is beneficial comparing to reading new ones
 - Sometimes she records her songs in front of her neighbours...
 
-In 2013, she participated in a concert in Chengdu, in which she sang a song named Rain in March ([Netease](http://music.163.com/#/m/song?id=28832323) | [Bilibili](https://www.bilibili.com/video/av599025)). The video was criticised by her fans because the camera never gave a clear shot of Lingyuan yousa. Besides, the video uploaded to Bilibili is somehow downscaled, corrupting its clearness so that nobody could ever have an eye on Lingyuan yousa...
+In 2013, she participated in a concert in Chengdu, in which she sang a song named Rain in March ([Netease](http://music.163.com/#/m/song?id=28832323) | [Bilibili](https://www.bilibili.com/video/av599025)). The video was criticised by her fans because the camera never gave a close shot of Lingyuan yousa. Besides, the video uploaded to Bilibili is somehow downscaled, corrupting its quality so that nobody could ever have an eye on her at all...
+
+![](https://o0stweauh.qnssl.com/7031dac2a246be3dbc8e4939e509e705_b.png)
 
 ### Conclusion
 
-Lingyuan is a mysterious while interesting singer. She lives in her songs. She has so many fans across China but none of her fans has seen her in the flesh. Though she is never disclosed in the real world, it's never a problem, so long as she receives welcome and respect in her daily life and continues producing songs of high quality.
+Lingyuan is a mysterious while interesting singer. She lives in her songs. She has so many fans across China but they rarely see her in the flesh. Though she is never disclosed in the real world, it's never a problem, so long as she receives welcome and respect in her daily life and continues producing songs of high quality.
 
 **Bookmarks**
 
