fix minor problem

--- a/_posts/2017-02-11-on-yousa.md
+++ b/_posts/2017-02-11-on-yousa.md
@@ -50,7 +50,7 @@ By far the most complete documentation on her is from Moegirl Wiki [here](https:
 
 Even on this wiki, Lingyuan is as mysterious as on any other online platform:
 
-- She refuses all kinds of photographing in possible concerts.
+- She refuses all kinds of unauthorized photographing in possible concerts.
 - She refuses to disclose any personal information publicly on the internet.
 - A little anxious about seeing people but working to improve.
 
