--- a/_posts/2017-02-11-on-yousa.md
+++ b/_posts/2017-02-11-on-yousa.md
@@ -15,7 +15,7 @@ Her fans often refer to her as "Leng Niao", literally meaning "freezy bird" beca
 
 ### Mysteries
 
-Actually personal identity and photos of her are rarely indexed on the public net, making the singer rather mysterious. But her fans mainly know about her daily activities on her Sina Microblog, on which she updates feeds regularly. She also livestreams on Bilibili Live but she would never expose herself in front of the camera.
+Actually personal identity and photos of her are rarely indexed on the public net, making the singer rather mysterious. Her fans mainly know about her daily activities on her Sina Microblog, on which she updates feeds regularly. She also livestreams on Bilibili Live but she would never expose herself in front of the camera.
 
 The information I have grasped by far include:
 
@@ -24,7 +24,7 @@ The information I have grasped by far include:
 - She has a Mac but has a virtual machine running Windows in it
 - It seems that she uses "yousa519" as her ID for general online presence, probably indicating that she was born on 19th May (unsure about its genuity)
 
-I once tried a broad photo search on Google, trying to discover her photo but failed. The results I got was very disappointing. Apart from some ACG avatars of her and some covers of her discs the documents left are entire rubbish. 
+I once tried a broad photo search on Google, trying to discover her photo but failed. The results I got were very disappointing. Apart from some ACG avatars of her and some covers of her albums the documents left are entire rubbish. 
 
 **This is the most mysterious artist I have ever followed.**
 
@@ -46,13 +46,13 @@ It's impossible to find any of her live photos, videos, daily activity photos, c
 
 None is seen on Google.
 
-By far the most complete documentation on her is from Moegirl Wiki [here](https://zh.moegirl.org/zh-hans/泠鸢yousa)
+By far the most complete record on her is from Moegirl Wiki [here](https://zh.moegirl.org/zh-hans/泠鸢yousa)
 
 Even on this wiki, Lingyuan is as mysterious as on any other online platform:
 
 - She refuses all kinds of unauthorized photographing in possible concerts.
 - She refuses to disclose any personal information publicly on the internet.
-- A little anxious about seeing people but working to improve.
+- She's a little anxious about meeting people but working to improve.
 
 ### Works
 
@@ -72,9 +72,9 @@ She also participated in Bilibili's Spring Festival Gala in 2013, 2014, 2016 as 
 
 ### Media Exposure
 
-Because she refuses to be known by the public about her real identity, she is never exposed on TV or such traditional media. She once had an interview with someone and the video is posted on Bilibili in 2015, but it's been deleted as well.
+Because she refuses to be known by the public about her real identity, she is never exposed on TV or such traditional media. She once had an interview with someone and the video was posted on Bilibili in 2015, but it's been deleted as well.
 
-But it doesn't mean that nobody has ever interviewed her. Actually dortail.com, an ACG socialization site somehow did a brief communication with her, but only text was seen on the website's Wechat Public Platform...
+But it doesn't mean that nobody has ever interviewed her. Actually dortail.com, an ACG socialization site somehow contacted her, but only text was seen on the website's Wechat Public Platform...
 
 See the full interview [here](https://mp.weixin.qq.com/s?__biz=MzIwODA5MDE3OA==&mid=401277830&idx=1&sn=b8df0e13b10cab5c8b4fb9ffba61051f&3rd=MzA3MDU4NTYzMw==&scene=6#rd)
 
