update on yousa

--- a/_posts/2017-02-11-on-yousa.md
+++ b/_posts/2017-02-11-on-yousa.md
@@ -88,6 +88,38 @@ In 2013, she participated in a concert in Chengdu, in which she sang a song name
 
 ![](https://o0stweauh.qnssl.com/7031dac2a246be3dbc8e4939e509e705_b.png)
 
+### Online Presense
+
+#### Websites
+
+The studio Lingyuan yousa is in is called "Days". They have their own website and Twitter account, on which the studio updates its status regularly.
+
+The domain they preserve is daysdoujinsha.com, but when I once looked at its whois information, which provides users the identity of the website owner, I realised that they have made it private. What's more, the domain seller HiChina (Actually 阿里巴巴) even made the information random!
+
+![](https://o0stweauh.qnssl.com/scr-days.png)
+
+It seems that the website uses Weebly. The DNS resolution is provided by DNSPod, which is a Qihoo360 service.
+
+When Lingyuan published her first personal album, She launched a website, which seems to be based on Tumblr. The domain is yousafirstalbum.me. 
+
+However...
+
+![](https://o0stweauh.qnssl.com/scr-yousafirstalbum.png)
+
+OK, OK, OK...
+
+#### Foreign Social Services
+
+A search on Twitter didn't match any document.
+
+![](https://o0stweauh.qnssl.com/scr-yousa-twitter.png)
+
+Her YouTube channel looks good but doesn't provide with any personal information...
+
+![](https://o0stweauh.qnssl.com/scr-yousa-youtube.png)
+
+She also has Google+, but seems not being maintained.
+
 ### Conclusion
 
 Lingyuan is a mysterious while interesting singer. She lives in her songs. She has so many fans across China but they rarely see her in the flesh. Though she is never disclosed in the real world, it's never a problem, so long as she receives welcome and respect in her daily life and continues producing songs of high quality.
